--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,37 @@
       </div>
     </div>
     <header class="header media">
+      <div class="top-line"></div>
       <img src="img/header/header-bg.svg" alt="" class="header__bg">
+      <nav class="header__nav nav">
+        <div class="nav__lists">
+          <ul class="nav__list">
+            <li class="nav__item"><a class="nav__link" href="#portfolio">Кейсы</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Отзывы</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Тарифы</a></li>
+          </ul>
+          <ul class="nav__list">
+            <li class="nav__item"><a class="nav__link" href="#portfolio">Команда</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Контакты</a></li>
+            <li class="nav__item"><a class="nav__link" href="#">Заявка</a></li>
+          </ul>
+        </div>
+        <div class="nav__bottom">
+          <div class="nav__logo">
+            <img src="img/header/nav-logo.svg" alt="">
+          </div>
+          <div class="nav__contacts">
+            <div class="nav__contacts-row">
+              <a href="mailto:order@savov.ru" class="nav__contact nav__contact-mail">order@savov.ru</a>
+              <a href="tel:79006566903" class="nav__contact nav__contact-mail">+7 900 656 69 03</a>
+            </div>
+            <div class="nav__contacts-row">
+              <a href="#" class="nav__contact nav__contact-telegram">в telegram</a>
+              <a href="#" class="nav__contact nav__contact-whatsapp">в whatsapp</a>
+            </div>
+          </div>
+        </div>
+      </nav>
       <div class="container">
         <div class="header__top">
           <div class="header__logo">
@@ -47,15 +77,6 @@
               <span></span>
             </button>
           </div>
-          <nav class="header__nav nav">
-            <ul class="nav__list">
-              <li class="nav__item"><a class="nav__link" href="#portfolio">Портфолио</a></li>
-              <li class="nav__item"><a class="nav__link" href="#">Эксперты</a></li>
-              <li class="nav__item"><a class="nav__link" href="#">Цены</a></li>
-              <li class="nav__item"><a class="nav__link" href="#">Сделать заказ</a></li>
-              <li class="nav__item"><a class="nav__link phone" href="tel:+79006566903">+7 900 656 69 03</a></li>
-            </ul>
-          </nav>
           <button class="switch-theme-btn">
             
           </button>
@@ -2528,14 +2549,12 @@
     </div>
     <footer class="footer media" id="footer">
       <div class="container">
-        <div class="footer__inner">
-          <h2 class="footer__title">Оставьте заявку, подготовим предложение и поможем определиться с выбором услуг
-          </h2>
             <a href="#" class="footer__link footer__link_whatsapp">в whatsapp</a>
             <a href="mailto:order@savov.ru" class="footer__link footer__link_mail">order@savov.ru</a>
             <a href="#" class="footer__link footer__link_telegram">в telegram</a>
-        </div>
         <div class="footer__form-wrapper">
+          <h2 class="footer__title">Оставьте заявку, подготовим предложение и поможем определиться с выбором услуг
+          </h2>
           <form action="" class="footer__form form">
             <div class="form__inputs">
               <input type="text" placeholder="Имя" class="form__input">
