--- a/app/index.html
+++ b/app/index.html
@@ -37,13 +37,13 @@
         <div class="nav__lists">
           <ul class="nav__list">
             <li class="nav__item"><a class="nav__link" href="#portfolio">Кейсы</a></li>
-            <li class="nav__item"><a class="nav__link" href="#">Отзывы</a></li>
-            <li class="nav__item"><a class="nav__link" href="#">Тарифы</a></li>
+            <li class="nav__item"><a class="nav__link" href="#reviews">Отзывы</a></li>
+            <li class="nav__item"><a class="nav__link" href="#prices">Тарифы</a></li>
           </ul>
           <ul class="nav__list">
             <li class="nav__item"><a class="nav__link" href="#portfolio">Команда</a></li>
-            <li class="nav__item"><a class="nav__link" href="#">Контакты</a></li>
-            <li class="nav__item"><a class="nav__link" href="#">Заявка</a></li>
+            <li class="nav__item"><a class="nav__link" href="#contacts">Контакты</a></li>
+            <li class="nav__item"><a class="nav__link" href="#request">Заявка</a></li>
           </ul>
         </div>
         <div class="nav__bottom">
@@ -104,9 +104,15 @@
             </div>
           </a>
           <div class="header__services">
-            <div class="header__service">Контекстная, таргетированная и медийная реклама</div>
-            <div class="header__service">Диджитал-стратегия</div>
-            <div class="header__service">SMM</div>
+            <div class="header__services-row">
+              <div class="header__service">Контекстная, таргетированная и медийная реклама</div>
+              <div class="header__service">Диджитал-стратегия</div>
+              <div class="header__service">SMM</div>
+            </div>
+            <div class="header__services-row">
+              <div class="header__service">Контент</div>
+              <div class="header__service">Web-дизайн и разработка</div>
+            </div>
           </div>
         </div>
         <nav class="header__links">
@@ -117,14 +123,17 @@
         </nav>
       </div>
     </header>
-    <div class="services-new" id="portfolio">
+    <div class="team">
+      
+    </div>
+    <!-- <div class="services-new">
       <img class="services-new__img" src="img/services-new/bg.svg" alt="">
       <div class="services-new__inner">
         <div class="services-new__item"><span>Сайты</span><span>Сайты</span></div>
         <div class="services-new__item"><span>Реклама</span><span>Реклама</span></div>
         <div class="services-new__item"><span>Контент</span><span>Контент</span></div>
       </div>
-    </div>
+    </div> -->
     <!-- <div class="services media">
       <div class="container">
         <a href="#marketing" class="to-bottom_left">
@@ -1799,7 +1808,7 @@
         </div>
       </div>
     </div>
-    <div class="reviews media">
+    <div id="reviews" class="reviews media">
       <div class="container">
         <h2 class="reviews__title">Отзывы</h2>
         <div class="reviews__inners">
@@ -2064,7 +2073,7 @@
         </div>
       </div>
     </div>
-    <div class="prices media">
+    <div id="prices" class="prices media">
       <div class="container">
         <h2 class="prices__title">Тарифы и пакеты</h2>
         <div class="prices__inner">
@@ -2547,11 +2556,8 @@
         </div>
       </div>
     </div>
-    <footer class="footer media" id="footer">
+    <footer id="request" class="footer media" id="footer">
       <div class="container">
-            <a href="#" class="footer__link footer__link_whatsapp">в whatsapp</a>
-            <a href="mailto:order@savov.ru" class="footer__link footer__link_mail">order@savov.ru</a>
-            <a href="#" class="footer__link footer__link_telegram">в telegram</a>
         <div class="footer__form-wrapper">
           <h2 class="footer__title">Оставьте заявку, подготовим предложение и поможем определиться с выбором услуг
           </h2>
@@ -2600,6 +2606,15 @@
           <div class="footer__logo">
             <img src="img/footer/logo.svg" alt="">
           </div>
+        </div>
+        <div id="contacts" class="footer__sub-bottom">
+          <a href="#" class="footer__link footer__link_whatsapp">в whatsapp</a>
+          <a href="tel:79006566903" class="footer__link footer__link_phone">+7 900 656 69 03</a>
+          <a href="mailto:order@savov.ru" class="footer__link footer__link_mail">order@savov.ru</a>
+          <a href="#" class="footer__link footer__link_telegram">в telegram</a>
+        </div>
+        <div class="cookies">
+          Мы используем cookies для сбора обезличенных персональных данных. Они помогают настраивать рекламу и анализировать трафик. Оставаясь на сайте, вы соглашаетесь на сбор таких данных.
         </div>
       </div>
     </footer>
