--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
             <li class="nav__item"><a class="nav__link" href="#prices">Тарифы</a></li>
           </ul>
           <ul class="nav__list">
-            <li class="nav__item"><a class="nav__link" href="#portfolio">Команда</a></li>
+            <li class="nav__item"><a class="nav__link" href="#team">Команда</a></li>
             <li class="nav__item"><a class="nav__link" href="#contacts">Контакты</a></li>
             <li class="nav__item"><a class="nav__link" href="#request">Заявка</a></li>
           </ul>
@@ -123,8 +123,153 @@
         </nav>
       </div>
     </header>
-    <div class="team">
-      
+    <div id="team" class="team media">
+      <div class="container">
+        <h2 class="team__title">
+          работайте с экспертами, а не менеджерами
+        </h2>
+        <div class="team__inner">
+          <div class="team__item team__adrt">
+            <h3 class="team__item-title">Реклама</h3>
+            <div class="team__members">
+              <div class="team__member">
+                <div class="team__member-img">
+                  <img src="img/team/adv/1.jpg" alt="">
+                </div>
+                <div class="team__member-text">
+                  <div class="team__member-name"><span>Савов</span>&nbsp;<span>Глеб</span></div>
+                  <div class="team__member-position">главный 😂</div>
+                </div>
+                <div class="team__member-sertificats">
+                  <div class="team__member-sertificat">
+                    <img src="img/team/adv/sertificats/1.1.jpg" alt="" class="sertificat-img">
+                  </div>
+                  <div class="team__member-sertificat">
+                    <img src="img/team/adv/sertificats/1.2.jpg" alt="" class="sertificat-img">
+                  </div>
+                  <div class="team__member-sertificat">
+                    <img src="img/team/adv/sertificats/1.3.jpg" alt="" class="sertificat-img">
+                  </div>
+                  <div class="team__member-sertificat">
+                    <img src="img/team/adv/sertificats/1.4.jpg" alt="" class="sertificat-img">
+                  </div>
+                  <div class="team__member-sertificat">
+                    <img src="img/team/adv/sertificats/1.5.jpg" alt="" class="sertificat-img">
+                  </div>
+                </div>
+              </div>
+              <div class="team__member">
+                <div class="team__member-img">
+                  <img src="img/team/adv/2.jpg" alt="">
+                </div>
+                <div class="team__member-text">
+                  <div class="team__member-name"><span>Салов</span>&nbsp;<span>Дмитрий</span></div>
+                  <div class="team__member-position">контекстолог</div>
+                </div>
+                <div class="team__member-sertificats">
+                  <div class="team__member-sertificat">
+                    <img src="img/team/adv/sertificats/1.1.jpg" alt="" class="sertificat-img">
+                  </div>
+                  <div class="team__member-sertificat">
+                    <img src="img/team/adv/sertificats/1.2.jpg" alt="" class="sertificat-img">
+                  </div>
+                  <div class="team__member-sertificat">
+                    <img src="img/team/adv/sertificats/1.3.jpg" alt="" class="sertificat-img">
+                  </div>
+                </div>
+              </div>
+              <div class="team__member">
+                <div class="team__member-img">
+                  <img src="img/team/adv/3.jpg" alt="">
+                </div>
+                <div class="team__member-text">
+                  <div class="team__member-name"><span>Юлия</span></div>
+                  <div class="team__member-position">контекстолог</div>
+                </div>
+                <div class="team__member-sertificats">
+                  <div class="team__member-sertificat">
+                    <img src="img/team/adv/sertificats/1.1.jpg" alt="" class="sertificat-img">
+                  </div>
+                  <div class="team__member-sertificat">
+                    <img src="img/team/adv/sertificats/1.2.jpg" alt="" class="sertificat-img">
+                  </div>
+                </div>
+              </div>
+              <div class="team__member">
+                <div class="team__member-img">
+                  <img src="img/team/adv/4.jpg" alt="">
+                </div>
+                <div class="team__member-text">
+                  <div class="team__member-name"><span>Фемистоклов</span>&nbsp;<span>Влад</span></div>
+                  <div class="team__member-position">Таргетолог</div>
+                </div>
+                <div class="team__member-sertificats">
+                  <div class="team__member-sertificat">
+                    <img src="img/team/adv/sertificats/1.1.jpg" alt="" class="sertificat-img">
+                  </div>
+                  <div class="team__member-sertificat">
+                    <img src="img/team/adv/sertificats/1.2.jpg" alt="" class="sertificat-img">
+                  </div>
+                  <div class="team__member-sertificat">
+                    <img src="img/team/adv/sertificats/1.3.jpg" alt="" class="sertificat-img">
+                  </div>
+                </div>
+              </div>
+              <div class="team__member">
+                <div class="team__member-img">
+                  <img src="img/team/adv/5.jpg" alt="">
+                </div>
+                <div class="team__member-text">
+                  <div class="team__member-name"><span>Мулярчик</span>&nbsp;<span>Артём</span></div>
+                  <div class="team__member-position">веб-аналитик</div>
+                </div>
+                <div class="team__member-sertificats">
+                  <div class="team__member-sertificat">
+                    <img src="img/team/adv/sertificats/1.1.jpg" alt="" class="sertificat-img">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="team__item team__sites">
+            <h3 class="team__item-title">Сайты</h3>
+            <div class="team__members">
+              <div class="team__member">
+                <div class="team__member-img">
+                  <img src="img/team/sites/1.jpg" alt="">
+                </div>
+                <div class="team__member-text">
+                  <div class="team__member-name"><span>Войскович</span>&nbsp;<span>Артём</span></div>
+                  <div class="team__member-position">разработчик</div>
+                </div>
+              </div>
+              <div class="team__member">
+                <div class="team__member-img">
+                  <img src="img/team/sites/2.jpg" alt="">
+                </div>
+                <div class="team__member-text">
+                  <div class="team__member-name"><span>Ефимов</span>&nbsp;<span>Михаил</span></div>
+                  <div class="team__member-position">разработчик</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="team__item team__content">
+            <h3 class="team__item-title">Контент</h3>
+            <div class="team__members">
+              <div class="team__member">
+                <div class="team__member-img">
+                  <img src="img/team/content/1.jpg" alt="">
+                </div>
+                <div class="team__member-text">
+                  <div class="team__member-name"><span>Овсянникова</span>&nbsp;<span>Алена</span></div>
+                  <div class="team__member-position">СММ, контент</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- <div class="services-new">
       <img class="services-new__img" src="img/services-new/bg.svg" alt="">
@@ -248,7 +393,7 @@
                     <div class="tab-filter tab--active"><span>Контекстная реклама</span></div>
                     <div class="tab-filter"><span>Сайты</span></div>
                   </div>
-                  <div class="cases__tab-body tab-body d-flex">
+                  <div class="cases__tab-body-mini tab-body d-flex">
                     <div class="tab-body__names">
                       <button class="btn-prev slider-button">
                         <svg width="32" height="25" viewBox="0 0 32 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -264,7 +409,7 @@
                       </button>
                       <div class="name-tab tab--active">
                         <div class="name-tab__img">
-                          <img src="img/1.png" alt="">
+                          <img src="img/portfolio/pilki.svg" alt="">
                         </div>
                         <p class="name-tab__text">
                           ПИLКИ
@@ -272,7 +417,7 @@
                       </div>
                       <div class="name-tab">
                         <div class="name-tab__img">
-                          <img src="img/2.png" alt="">
+                          <img src="img/portfolio/TBS.svg" alt="">
                         </div>
                         <p class="name-tab__text">
                           ТВС
@@ -280,7 +425,7 @@
                       </div>
                       <div class="name-tab">
                         <div class="name-tab__img">
-                          <img src="img/1.png" alt="">
+                          <img src="img/portfolio/tvoi-bassein.svg" alt="">
                         </div>
                         <p class="name-tab__text">
                           ТвойБассейн
@@ -288,7 +433,7 @@
                       </div>
                       <div class="name-tab">
                         <div class="name-tab__img">
-                          <img src="img/1.png" alt="">
+                          <img src="img/portfolio/baza.svg" alt="">
                         </div>
                         <p class="name-tab__text">
                           Baza Dance Company
@@ -296,7 +441,7 @@
                       </div>
                       <div class="name-tab">
                         <div class="name-tab__img">
-                          <img src="img/1.png" alt="">
+                          <img src="img/portfolio/aqua.svg" alt="">
                         </div>
                         <p class="name-tab__text">
                           Аква Инжиниринг
@@ -2058,7 +2203,7 @@
         </div>
       </div>
     </div>
-    <div class="sertificats">
+    <div class="sertificats media">
       <div class="container">
         <h2 class="sertificats__title">Сертификаты</h2>
         <div class="sertificats__inner">
