--- a/app/index.html
+++ b/app/index.html
@@ -82,7 +82,7 @@
           </button>
         </div>
         <h1 class="header__title">
-          SAVOV<br> DIGITAL-АГЕНТСТВО<br>ПОЛНОГО ЦИКЛА
+          DIGITAL-АГЕНТСТВО<br>ПОЛНОГО ЦИКЛА
         </h1>
         <div class="header__to-bottom">
           <a href="#portfolio" class="to-bottom_left">
@@ -117,7 +117,7 @@
         </div>
         <nav class="header__links">
           <a class="link-phone" href="tel:+79006566903">+7 900 656 69 03</a>
-          <a href="#footer" class="request-btn">
+          <a href="#request" class="request-btn">
             Заявка
           </a>
         </nav>
@@ -137,7 +137,7 @@
                   <img src="img/team/adv/1.jpg" alt="">
                 </div>
                 <div class="team__member-text">
-                  <div class="team__member-name"><span>Савов</span>&nbsp;<span>Глеб</span></div>
+                  <div class="team__member-name"><span>Савов</span><span>Глеб</span></div>
                   <div class="team__member-position">главный 😂</div>
                 </div>
                 <div class="team__member-sertificats">
@@ -163,7 +163,7 @@
                   <img src="img/team/adv/2.jpg" alt="">
                 </div>
                 <div class="team__member-text">
-                  <div class="team__member-name"><span>Салов</span>&nbsp;<span>Дмитрий</span></div>
+                  <div class="team__member-name"><span>Салов</span><span>Дмитрий</span></div>
                   <div class="team__member-position">контекстолог</div>
                 </div>
                 <div class="team__member-sertificats">
@@ -200,7 +200,7 @@
                   <img src="img/team/adv/4.jpg" alt="">
                 </div>
                 <div class="team__member-text">
-                  <div class="team__member-name"><span>Фемистоклов</span>&nbsp;<span>Влад</span></div>
+                  <div class="team__member-name"><span>Фемистоклов</span><span>Влад</span></div>
                   <div class="team__member-position">Таргетолог</div>
                 </div>
                 <div class="team__member-sertificats">
@@ -220,7 +220,7 @@
                   <img src="img/team/adv/5.jpg" alt="">
                 </div>
                 <div class="team__member-text">
-                  <div class="team__member-name"><span>Мулярчик</span>&nbsp;<span>Артём</span></div>
+                  <div class="team__member-name"><span>Мулярчик</span><span>Артём</span></div>
                   <div class="team__member-position">веб-аналитик</div>
                 </div>
                 <div class="team__member-sertificats">
@@ -239,7 +239,7 @@
                   <img src="img/team/sites/1.jpg" alt="">
                 </div>
                 <div class="team__member-text">
-                  <div class="team__member-name"><span>Войскович</span>&nbsp;<span>Артём</span></div>
+                  <div class="team__member-name"><span>Войскович</span><span>Артём</span></div>
                   <div class="team__member-position">разработчик</div>
                 </div>
               </div>
@@ -248,7 +248,7 @@
                   <img src="img/team/sites/2.jpg" alt="">
                 </div>
                 <div class="team__member-text">
-                  <div class="team__member-name"><span>Ефимов</span>&nbsp;<span>Михаил</span></div>
+                  <div class="team__member-name"><span>Ефимов</span><span>Михаил</span></div>
                   <div class="team__member-position">разработчик</div>
                 </div>
               </div>
@@ -262,7 +262,7 @@
                   <img src="img/team/content/1.jpg" alt="">
                 </div>
                 <div class="team__member-text">
-                  <div class="team__member-name"><span>Овсянникова</span>&nbsp;<span>Алена</span></div>
+                  <div class="team__member-name"><span>Овсянникова</span><span>Алена</span></div>
                   <div class="team__member-position">СММ, контент</div>
                 </div>
               </div>
@@ -393,7 +393,7 @@
                     <div class="tab-filter tab--active"><span>Контекстная реклама</span></div>
                     <div class="tab-filter"><span>Сайты</span></div>
                   </div>
-                  <div class="cases__tab-body-mini tab-body d-flex">
+                  <div class="cases__tab-body cases__tab-body-mini tab-body d-flex">
                     <div class="tab-body__names">
                       <button class="btn-prev slider-button">
                         <svg width="32" height="25" viewBox="0 0 32 25" fill="none" xmlns="http://www.w3.org/2000/svg">
