--- a/app/index.html
+++ b/app/index.html
@@ -133,7 +133,7 @@
             <h3 class="team__item-title">Реклама</h3>
             <div class="team__members">
               <div class="team__member">
-                <div class="team__member-img">
+                <div class="team__member-img btn-team" data-path="team-1">
                   <img src="img/team/adv/1.jpg" alt="">
                 </div>
                 <div class="team__member-text">
@@ -159,7 +159,7 @@
                 </div>
               </div>
               <div class="team__member">
-                <div class="team__member-img">
+                <div class="team__member-img btn-team" data-path="team-2">
                   <img src="img/team/adv/2.jpg" alt="">
                 </div>
                 <div class="team__member-text">
@@ -179,7 +179,7 @@
                 </div>
               </div>
               <div class="team__member">
-                <div class="team__member-img">
+                <div class="team__member-img btn-team" data-path="team-3">
                   <img src="img/team/adv/3.jpg" alt="">
                 </div>
                 <div class="team__member-text">
@@ -266,6 +266,99 @@
                   <div class="team__member-position">СММ, контент</div>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-overlay-team">
+        <div class="modal__team" data-target="team-1">
+          <div class="team__slider">
+            <div class="team__slider-img">
+              <img src="img/team/team-1/2.jpg" alt="">
+            </div>
+            <div class="team__slider-img">
+              <img src="img/team/team-1/1.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-overlay-team">
+        <div class="modal__team" data-target="team-2">
+          <div class="team__slider">
+            <div class="team__slider-img">
+              <img src="img/team/team-2/1.jpg" alt="">
+            </div>
+            <div class="team__slider-img">
+              <img src="img/team/team-2/2.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-overlay-team">
+        <div class="modal__team" data-target="team-3">
+          <div class="team__slider">
+            <div class="team__slider-img">
+              <img src="img/team/team-3/1.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-overlay-team">
+        <div class="modal__team" data-target="team-4">
+          <div class="team__slider">
+            <div class="team__slider-img">
+              <img src="img/team/team-1/2.jpg" alt="">
+            </div>
+            <div class="team__slider-img">
+              <img src="img/team/team-1/1.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-overlay-team">
+        <div class="modal__team" data-target="team-5">
+          <div class="team__slider">
+            <div class="team__slider-img">
+              <img src="img/team/team-1/2.jpg" alt="">
+            </div>
+            <div class="team__slider-img">
+              <img src="img/team/team-1/1.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-overlay-team">
+        <div class="modal__team" data-target="team-6">
+          <div class="team__slider">
+            <div class="team__slider-img">
+              <img src="img/team/team-1/2.jpg" alt="">
+            </div>
+            <div class="team__slider-img">
+              <img src="img/team/team-1/1.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-overlay-team">
+        <div class="modal__team" data-target="team-7">
+          <div class="team__slider">
+            <div class="team__slider-img">
+              <img src="img/team/team-1/2.jpg" alt="">
+            </div>
+            <div class="team__slider-img">
+              <img src="img/team/team-1/1.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-overlay-team">
+        <div class="modal__team" data-target="team-8">
+          <div class="team__slider">
+            <div class="team__slider-img">
+              <img src="img/team/team-1/2.jpg" alt="">
+            </div>
+            <div class="team__slider-img">
+              <img src="img/team/team-1/1.jpg" alt="">
             </div>
           </div>
         </div>
@@ -826,7 +919,7 @@
                   </div>
                   <div class="cases__tab-body tab-body">
                     <div class="portfolio-tab_">
-                      <div class="portfolio__filters-row">
+                      <!-- <div class="portfolio__filters-row">
                         <button class="portfolio__filters-btn portfolio__nav--active">
                           Контекст
                         </button>
@@ -836,7 +929,7 @@
                         <button class="portfolio__filters-btn">
                           Под ключ
                         </button>
-                      </div>
+                      </div> -->
                       <div class="portfolio__inner portfolio--active">
                         <div class="portfolio__item-row">
                           <div class="portfolio__item">
