--- a/app/index.html
+++ b/app/index.html
@@ -141,7 +141,7 @@
                   <div class="team__member-position">главный 😂</div>
                 </div>
                 <div class="team__member-sertificats">
-                  <div class="team__member-sertificat">
+                  <div class="team__member-sertificat btn-sertificat" data-path="sertificats-1">
                     <img src="img/team/adv/sertificats/1.1.jpg" alt="" class="sertificat-img">
                   </div>
                   <div class="team__member-sertificat">
@@ -196,7 +196,7 @@
                 </div>
               </div>
               <div class="team__member">
-                <div class="team__member-img">
+                <div class="team__member-img btn-team" data-path="team-4">
                   <img src="img/team/adv/4.jpg" alt="">
                 </div>
                 <div class="team__member-text">
@@ -216,7 +216,7 @@
                 </div>
               </div>
               <div class="team__member">
-                <div class="team__member-img">
+                <div class="team__member-img btn-team" data-path="team-5">
                   <img src="img/team/adv/5.jpg" alt="">
                 </div>
                 <div class="team__member-text">
@@ -258,7 +258,7 @@
             <h3 class="team__item-title">Контент</h3>
             <div class="team__members">
               <div class="team__member">
-                <div class="team__member-img">
+                <div class="team__member-img btn-team" data-path="team-6">
                   <img src="img/team/content/1.jpg" alt="">
                 </div>
                 <div class="team__member-text">
@@ -307,10 +307,13 @@
         <div class="modal__team" data-target="team-4">
           <div class="team__slider">
             <div class="team__slider-img">
-              <img src="img/team/team-1/2.jpg" alt="">
+              <img src="img/team/team-4/1.jpg" alt="">
             </div>
             <div class="team__slider-img">
-              <img src="img/team/team-1/1.jpg" alt="">
+              <img src="img/team/team-4/2.jpg" alt="">
+            </div>
+            <div class="team__slider-img">
+              <img src="img/team/team-4/3.jpg" alt="">
             </div>
           </div>
         </div>
@@ -319,10 +322,16 @@
         <div class="modal__team" data-target="team-5">
           <div class="team__slider">
             <div class="team__slider-img">
-              <img src="img/team/team-1/2.jpg" alt="">
+              <img src="img/team/team-5/4.jpg" alt="">
             </div>
             <div class="team__slider-img">
-              <img src="img/team/team-1/1.jpg" alt="">
+              <img src="img/team/team-5/2.jpg" alt="">
+            </div>
+            <div class="team__slider-img">
+              <img src="img/team/team-5/3.jpg" alt="">
+            </div>
+            <div class="team__slider-img">
+              <img src="img/team/team-5/1.jpg" alt="">
             </div>
           </div>
         </div>
@@ -331,34 +340,28 @@
         <div class="modal__team" data-target="team-6">
           <div class="team__slider">
             <div class="team__slider-img">
-              <img src="img/team/team-1/2.jpg" alt="">
-            </div>
-            <div class="team__slider-img">
-              <img src="img/team/team-1/1.jpg" alt="">
+              <img src="img/team/team-8/1.jpg" alt="">
             </div>
           </div>
         </div>
       </div>
-      <div class="modal-overlay-team">
-        <div class="modal__team" data-target="team-7">
-          <div class="team__slider">
-            <div class="team__slider-img">
-              <img src="img/team/team-1/2.jpg" alt="">
+      <div class="modal-overlay-sertificats">
+        <div class="modal__sertificats" data-target="sertificats-1">
+          <div class="sertificats__slider">
+            <div class="sertificats__slider-img">
+              <img src="img/sertificats/sertificat-modal.png" alt="">
             </div>
-            <div class="team__slider-img">
-              <img src="img/team/team-1/1.jpg" alt="">
+            <div class="sertificats__slider-img">
+              <img src="img/sertificats/sertificat-modal.png" alt="">
             </div>
-          </div>
-        </div>
-      </div>
-      <div class="modal-overlay-team">
-        <div class="modal__team" data-target="team-8">
-          <div class="team__slider">
-            <div class="team__slider-img">
-              <img src="img/team/team-1/2.jpg" alt="">
+            <div class="sertificats__slider-img">
+              <img src="img/sertificats/sertificat-modal.png" alt="">
             </div>
-            <div class="team__slider-img">
-              <img src="img/team/team-1/1.jpg" alt="">
+            <div class="sertificats__slider-img">
+              <img src="img/sertificats/sertificat-modal.png" alt="">
+            </div>
+            <div class="sertificats__slider-img">
+              <img src="img/sertificats/sertificat-modal.png" alt="">
             </div>
           </div>
         </div>
@@ -2651,7 +2654,7 @@
           </div>
         </div>
       </div>
-      <div class="modal-overlay-video">
+      <!-- <div class="modal-overlay-video">
         <div class="modal__video" data-target="review-popup-1">
           <iframe src="https://www.youtube.com/embed/I1cmVFdgca4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
@@ -2685,7 +2688,7 @@
         <div class="modal__video" data-target="review-popup-7">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/fTvTCP9-Z98" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-      </div>
+      </div> -->
     </div>
     <footer id="request" class="footer media" id="footer">
       <div class="container">
