--- a/app/index.html
+++ b/app/index.html
@@ -140,11 +140,11 @@
                   <div class="team__member-name"><span>Савов</span><span>Глеб</span></div>
                   <div class="team__member-position">главный 😂</div>
                 </div>
-                <div class="team__member-sertificats">
-                  <div class="team__member-sertificat btn-sertificat" data-path="sertificats-1">
+                <div class="team__member-sertificats btn-sertificat" data-path="sertificats-1">
+                  <div class="team__member-sertificat">
                     <img src="img/team/adv/sertificats/1.1.jpg" alt="" class="sertificat-img">
                   </div>
-                  <div class="team__member-sertificat">
+                  <div class="team__member-sertificat" >
                     <img src="img/team/adv/sertificats/1.2.jpg" alt="" class="sertificat-img">
                   </div>
                   <div class="team__member-sertificat">
@@ -166,7 +166,7 @@
                   <div class="team__member-name"><span>Салов</span><span>Дмитрий</span></div>
                   <div class="team__member-position">контекстолог</div>
                 </div>
-                <div class="team__member-sertificats">
+                <div class="team__member-sertificats btn-sertificat" data-path="sertificats-2">
                   <div class="team__member-sertificat">
                     <img src="img/team/adv/sertificats/1.1.jpg" alt="" class="sertificat-img">
                   </div>
@@ -186,7 +186,7 @@
                   <div class="team__member-name"><span>Юлия</span></div>
                   <div class="team__member-position">контекстолог</div>
                 </div>
-                <div class="team__member-sertificats">
+                <div class="team__member-sertificats btn-sertificat" data-path="sertificats-3">
                   <div class="team__member-sertificat">
                     <img src="img/team/adv/sertificats/1.1.jpg" alt="" class="sertificat-img">
                   </div>
@@ -203,7 +203,7 @@
                   <div class="team__member-name"><span>Фемистоклов</span><span>Влад</span></div>
                   <div class="team__member-position">Таргетолог</div>
                 </div>
-                <div class="team__member-sertificats">
+                <div class="team__member-sertificats btn-sertificat" data-path="sertificats-4">
                   <div class="team__member-sertificat">
                     <img src="img/team/adv/sertificats/1.1.jpg" alt="" class="sertificat-img">
                   </div>
@@ -223,7 +223,7 @@
                   <div class="team__member-name"><span>Мулярчик</span><span>Артём</span></div>
                   <div class="team__member-position">веб-аналитик</div>
                 </div>
-                <div class="team__member-sertificats">
+                <div class="team__member-sertificats btn-sertificat" data-path="sertificats-5">
                   <div class="team__member-sertificat">
                     <img src="img/team/adv/sertificats/1.1.jpg" alt="" class="sertificat-img">
                   </div>
@@ -360,6 +360,57 @@
             <div class="sertificats__slider-img">
               <img src="img/sertificats/sertificat-modal.png" alt="">
             </div>
+            <div class="sertificats__slider-img">
+              <img src="img/sertificats/sertificat-2.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-overlay-sertificats">
+        <div class="modal__sertificats" data-target="sertificats-2">
+          <div class="sertificats__slider">
+            <div class="sertificats__slider-img">
+              <img src="img/sertificats/sertificat-modal.png" alt="">
+            </div>
+            <div class="sertificats__slider-img">
+              <img src="img/sertificats/sertificat-2.png" alt="">
+            </div>
+            <div class="sertificats__slider-img">
+              <img src="img/sertificats/sertificat-modal.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-overlay-sertificats">
+        <div class="modal__sertificats" data-target="sertificats-3">
+          <div class="sertificats__slider">
+            <div class="sertificats__slider-img">
+              <img src="img/sertificats/sertificat-modal.png" alt="">
+            </div>
+            <div class="sertificats__slider-img">
+              <img src="img/sertificats/sertificat-2.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-overlay-sertificats">
+        <div class="modal__sertificats" data-target="sertificats-4">
+          <div class="sertificats__slider">
+            <div class="sertificats__slider-img">
+              <img src="img/sertificats/sertificat-modal.png" alt="">
+            </div>
+            <div class="sertificats__slider-img">
+              <img src="img/sertificats/sertificat-2.png" alt="">
+            </div>
+            <div class="sertificats__slider-img">
+              <img src="img/sertificats/sertificat-modal.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-overlay-sertificats">
+        <div class="modal__sertificats" data-target="sertificats-5">
+          <div class="sertificats__slider">
             <div class="sertificats__slider-img">
               <img src="img/sertificats/sertificat-modal.png" alt="">
             </div>
@@ -2061,7 +2112,7 @@
         <div class="clients__inner">
           <div class="clients__item">
             <img src="img/clients/1.svg" alt="" class="clients__logo pilki">
-            <img src="img/clients/1.svg" alt="" class="clients__logo_hover pilki">
+            <img src="img/clients/1-hover.svg" alt="" class="clients__logo_hover pilki">
           </div>
           <div class="clients__item">
             <img src="img/clients/2.svg" alt="" class="clients__logo bassein">
@@ -2654,7 +2705,7 @@
           </div>
         </div>
       </div>
-      <!-- <div class="modal-overlay-video">
+      <div class="modal-overlay-video">
         <div class="modal__video" data-target="review-popup-1">
           <iframe src="https://www.youtube.com/embed/I1cmVFdgca4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
@@ -2688,7 +2739,7 @@
         <div class="modal__video" data-target="review-popup-7">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/fTvTCP9-Z98" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-      </div> -->
+      </div>
     </div>
     <footer id="request" class="footer media" id="footer">
       <div class="container">
